# HorizonAi

./: API_DOCUMENTATION.md  DEPLOYMENT_GUIDE.md  FEEDBACK_IMPLEMENTATION.md  README.md  complete_database_setup.sql  fly.toml  pyproject.toml  railway.toml  render.yaml  run_backend.py
.github/workflows/: ci-cd.yml
backend/: backend_api.py
frontend/: .env.example  tailwind.config.js  vercel.json
frontend/public/: index.html
frontend/src/: App.js
frontend/src/components/Auth/: APIKeySetup.js  LoginPage.js
frontend/src/components/Dashboard/: Dashboard.js  MainContent.js  Sidebar.js
frontend/src/components/Feedback/: FeedbackModal.js
frontend/src/components/FileUpload/: FileUpload.js
frontend/src/components/Query/: QueryHistory.js  QueryInterface.js
frontend/src/components/Settings/: APIKeyCheck.js  APIKeySettings.js
frontend/src/components/common/: APIKeyErrorGuide.js  ThemeToggle.js
frontend/src/contexts/: ThemeContext.js
frontend/src/services/: supabase.js
