[project]
name = "HorizonAI-backend"
version = "0.1.0"
description = "HorizonAI - Natural Language to DataFrames Backend API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pandas>=2.3.1",
    "numpy>=1.24.0",
    "openpyxl>=3.1.5",
    "python-multipart>=0.0.6",
    "requests>=2.32.4",
    "httpx>=0.25.0",
    "PyJWT>=2.8.0",
    "python-jose[cryptography]>=3.3.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "supabase>=2.0.0",
    "groq>=0.4.0",
]
